--- a/joketeller/build.gradle
+++ b/joketeller/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 10
         targetSdkVersion 22
         versionCode 1
@@ -17,19 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    // Added for AdMob
-    compile 'com.google.android.gms:play-services:7.3.0'
-
-    compile project(':jokeprovider')
-    compile project(':joketeller')
+    compile 'com.android.support:appcompat-v7:22.2.1'
 }
