GCE, loading indicator

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    // Added for AdMob
-    compile 'com.google.android.gms:play-services:7.3.0'
-
-    compile project(':jokeprovider')
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.google.android.gms:play-services-ads:7.5.0'
     compile project(':joketeller')
+    compile project(path: ':JokeApi', configuration:  'android-endpoints')
+    compile 'io.reactivex:rxandroid:0.25.0'
 }
