--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,23 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    productFlavors {
+        free {
+            applicationId "com.arbuleac.builditbigger.free"
+            buildConfigField "boolean", "IS_PAID", "false"
+        }
+
+        paid {
+            applicationId "com.arbuleac.builditbigger.paid"
+            buildConfigField "boolean", "IS_PAID", "true"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -27,8 +37,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.google.android.gms:play-services-ads:7.5.0'
+    freeCompile 'com.google.android.gms:play-services-ads:7.5.0'
     compile project(':joketeller')
-    compile project(path: ':JokeApi', configuration:  'android-endpoints')
+    compile project(path: ':JokeApi', configuration: 'android-endpoints')
     compile 'io.reactivex:rxandroid:0.25.0'
 }
